--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "feather-icons": "^4.29.2",
     "firebase": "^11.4.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
