--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "feather-icons": "^4.29.2",
     "firebase": "^11.4.0",
+    "firebase-admin": "^13.2.0",
+    "lucide-react": "^0.482.0",
+    "motion": "^12.6.2",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "sweetalert2": "^11.17.2"
+    "recharts": "^2.15.1",
+    "sweetalert2": "^11.17.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
